--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+#dev
+/public/assets
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-
 # testing
 /coverage
 
@@ -32,3 +33,4 @@ yarn-error.log*
 
 # vercel
 .vercel
+
